# dora-opencv-image-splitter

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yaml
dev/: README.md
example/: dataflow.yaml
src/dora_opencv_image_splitter/: __init__.py  main.py
